--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev" : "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,9 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongodb": "^5.2.0"
+    "mongodb": "^5.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
